[package]
name = "table-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "52.2.0"
arrow-array = "53.0.0"
async-stream = "0.3.5"
async-trait = "0.1.82"
bb8 = "0.8.5"
chrono = "0.4.38"
connection-string = "0.2.0"
datafusion = "41.0.0"
datafusion-table-providers = "0.1.0"
futures = "0.3.30"
pin-project = "1.1.5"
secrecy = "0.10.1"
tiberius = { version = "0.12.3", features = ["chrono", "time", "tokio"] }
tokio = { version = "1.40.0", features = ["net"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
uuid = "1.10.0"
